--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "bracketSpacing": true
   },
   "dependencies": {
-    "ethers": "5.7.2"
-  }
+    "ethers": "5.7.2",
+    "zksync-web3": "^0.14.3"
+  },
+  "devDependencies": {}
 }
